本番適用版

--- a/flask_app/templates/food-list.html
+++ b/flask_app/templates/food-list.html
@@ -30,6 +30,7 @@
         // actionの分岐
         function setAction(actionType) {
             let form = document.getElementById('food-list-form-js');
+            form.target = ""; // 初期化
             if (actionType === "edit") {
                 form.action = "/edit";
             } else if (actionType === "delete") {
