--- a/flask_app/templates/common/layout.html
+++ b/flask_app/templates/common/layout.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200">
     <meta name="description" content="">
     <title>期限管理アプリ</title>
     <link rel="stylesheet" href="../static/css/main.css">
