--- a/flask_app/templates/how-to-use.html
+++ b/flask_app/templates/how-to-use.html
@@ -4,7 +4,7 @@
     <div class="Container-inner">
         <div class="text-box">
             <h2>1. サインアップ, ログイン</h2>
-            <p><a href="">新規登録画面</a>からサインアップ、そしてログインをしましょう。<br>テスト用に、以下のログイン情報を用意しています。</p>
+            <p><a href="/auth/signup">新規登録画面</a>からサインアップ、そして<a href="/auth/login">ログイン</a>をしましょう。<br>テスト用に、以下のログイン情報を用意しています。</p>
             <p>ユーザー名：test<br>パスワード：test</p>
 
             <h2>2. 食品リスト</h2>
@@ -16,7 +16,7 @@
             <h2>3. レシート登録</h2>
             <p>購入した食品を、レシートから登録することができます。テスト用に、以下のレシートを用意しています。</p>
             <p><img src="../static/img/how-to-use/example-receipt.jpeg" class="width-30"></p>
-            <p><a href="https://getnews.jp/archives/2935736/gate" class="font-14">引用元</a></p>
+            <p><a href="https://getnews.jp/archives/2935736/gate" class="font-14" target="_blank" rel="noopener noreferrer">引用元</a></p>
             <p>レシートの読み取りでは、食品以外のテキストも含まれてしまいます(修正予定)。<br>購入した食材にチェックを入れて、期限を設定しましょう。</p>
         </div>
     </div>
