--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -22,6 +22,7 @@
                     <input type="submit", value="ログイン">
                 </form>
                 <p class="login-text"><a href="/auth/signup">新規登録はこちら</a></p>
+                <p class="how-to-use-text"><a href="/how-to-use">使い方はこちら</a></p>
             </div>
         </div>
     </div>
