--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -23,6 +23,7 @@
                     <input type="submit", value="登録">
                 </form>
                 <p class="login-text"><a href="/auth/login">ログインはこちら</a></p>
+                <p class="how-to-use-text"><a href="/how-to-use">使い方はこちら</a></p>
             </div>
         </div>
     </div>
