--- a/flask_app/templates/how-to-use.html
+++ b/flask_app/templates/how-to-use.html
@@ -4,7 +4,7 @@
     <div class="Container-inner">
         <div class="text-box">
             <h2>1. サインアップ, ログイン</h2>
-            <p><a href="/auth/signup">新規登録画面</a>からサインアップ、そして<a href="/auth/login">ログイン</a>をしましょう。<br>テスト用に、以下のログイン情報を用意しています。</p>
+            <p><a href="/signup">新規登録画面</a>からサインアップ、そして<a href="/login">ログイン</a>をしましょう。<br>テスト用に、以下のログイン情報を用意しています。</p>
             <p>ユーザー名：test<br>パスワード：test</p>
 
             <h2>2. 食品リスト</h2>
