--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -7,7 +7,7 @@
             </div>
             <div class="signup-form">
                 <p class="signup-form-text">ログイン</p>
-                <form method="POST" action="/auth/login">
+                <form method="POST" action="/login">
                     <div class="user-name">
                         <label for="user-name">ユーザー名</label>
                         <input type="text", name="user-name", required>
@@ -21,7 +21,7 @@
                     {% endif %}
                     <input type="submit", value="ログイン">
                 </form>
-                <p class="login-text"><a href="/auth/signup">新規登録はこちら</a></p>
+                <p class="login-text"><a href="/signup">新規登録はこちら</a></p>
                 <p class="how-to-use-text"><a href="/how-to-use">使い方はこちら</a></p>
             </div>
         </div>
