--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -8,7 +8,7 @@
             </div>
             <div class="signup-form">
                 <p class="signup-form-text">新規登録</p>
-                <form method="POST" action="/auth/signup">
+                <form method="POST" action="/signup">
                     <div class="user-name">
                         <label for="user-name">ユーザー名</label>
                         <input type="text", name="user-name", required>
@@ -22,7 +22,7 @@
                     {% endif %}
                     <input type="submit", value="登録">
                 </form>
-                <p class="login-text"><a href="/auth/login">ログインはこちら</a></p>
+                <p class="login-text"><a href="/login">ログインはこちら</a></p>
                 <p class="how-to-use-text"><a href="/how-to-use">使い方はこちら</a></p>
             </div>
         </div>
