ログイン画面の表示を修正

--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -3,7 +3,10 @@
     <div class="Signup">
         <div class="content">
             <div class="welcome">
-                <p class="welcome-text">期限管理アプリに<br>ようこそ！</p>
+                <div class="welcome-box">
+                    <p class="welcome-text">期限管理アプリに<br>ようこそ！</p>
+                    <p class="test-user-text" style="padding-top: 20px; font-size: 14px;">※テストユーザーは、test/test でログインできます。</p>
+                </div>
             </div>
             <div class="signup-form">
                 <p class="signup-form-text">ログイン</p>
